--- a/webapp/src/main/resources/templates/fleet/editcar.html
+++ b/webapp/src/main/resources/templates/fleet/editcar.html
@@ -13,32 +13,32 @@
             <form method="POST" th:object="${car}"  action="/fleet/editcar">
                 <div th:class="${#fields.hasErrors('brand')}? 'has-error'">
                     <label th:for="${#ids.next('brand')}"><p th:text="#{car.brandm}">Brand</p></label>
-                    <input type="text" th:field="*{brand}" />
+                    <input type="text" th:field="*{brand}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('model')}? 'has-error'">
                     <label th:for="${#ids.next('model')}"> <p th:text="#{car.modelm}">model</p></label>
-                    <input type="text" th:field="*{model}" />
+                    <input type="text" th:field="*{model}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('model')}" th:errors="*{model}"></span>
                 </div>
 
 
                 <div th:class="${#fields.hasErrors('category')}? 'has-error'">
                     <label th:for="${#ids.next('category')}"><p th:text="#{car.categorym}">category</p></label>
-                    <input type="text" th:field="*{category}" />
+                    <input type="text" th:field="*{category}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('category')}" th:errors="*{category}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('pk')}? 'has-error'">
                     <label th:for="${#ids.next('pk')}"> <p th:text="#{car.pkm}">pk</p></label>
-                    <input type="text" th:field="*{pk}" />
+                    <input type="text" th:field="*{pk}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('pk')}" th:errors="*{pk}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('emission')}? 'has-error'">
                     <label th:for="${#ids.next('emission')}"><p th:text="#{car.emissionm}">emission</p></label>
-                    <input type="text" th:field="*{emission}" />
+                    <input type="text" th:field="*{emission}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('emission')}" th:errors="*{emission}"></span>
                 </div>
 
@@ -46,16 +46,15 @@
                 <div th:class="${#fields.hasErrors('fuelType')}? 'has-error'">
                     <label th:for="${#ids.next('fuelType')}"> <p th:text="#{car.fueltypem}">fueltype</p></label>
 
-                    <select name="fuel-selector" th:field="*{fuelType}">
+                    <select name="fuel-selector" th:field="*{fuelType}" class="form-control">
                         <option th:each="fuel : ${T(com.realdolmen.fleet.enums.FuelType).values()}" th:value="${fuel}" th:text="${fuel}"  ></option>
                     </select>
-                    <!--   <input type="text" th:field="*{fuelType}" /> -->
                     <span th:if="${#fields.hasErrors('fuelType')}" th:errors="*{fuelType}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('carType')}? 'has-error'">
                     <label th:for="${#ids.next('carType')}"><p th:text="#{car.typem}">car type</p></label>
-                    <select name="cartype-selector" th:field="*{carType}" >
+                    <select name="cartype-selector" th:field="*{carType}" class="form-control">
                         <option th:each="fuel : ${T(com.realdolmen.fleet.enums.CarType).values()}" th:value="${fuel}" th:text="${fuel}" ></option>
                     </select>
 
@@ -63,48 +62,48 @@
                 </div>
                 <div th:class="${#fields.hasErrors('fiscalHP')}? 'has-error'">
                     <label th:for="${#ids.next('fiscalHP')}"><p th:text="#{car.fiscalhpm}">fiscalhp</p></label>
-                    <input type="text" th:field="*{fiscalHP}" />
+                    <input type="text" th:field="*{fiscalHP}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('fiscalHP')}" th:errors="*{fiscalHP}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('deliveryTime')}? 'has-error'">
                     <label th:for="${#ids.next('deliveryTime')}"> <p th:text="#{car.deliverytimem}">delivery time</p></label>
-                    <input type="text" th:field="*{deliveryTime}" />
+                    <input type="text" th:field="*{deliveryTime}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('deliveryTime')}" th:errors="*{deliveryTime}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('idealKm')}? 'has-error'">
                     <label th:for="${#ids.next('idealKm')}"> <p th:text="#{car.idealkmm}">ideal km</p></label>
-                    <input type="text" th:field="*{idealKm}" />
+                    <input type="text" th:field="*{idealKm}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('idealKm')}" th:errors="*{idealKm}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('maxKm')}? 'has-error'">
                     <label th:for="${#ids.next('maxKm')}"> <p th:text="#{car.maxkmm}"> max km</p></label>
-                    <input type="text" th:field="*{maxKm}" />
+                    <input type="text" th:field="*{maxKm}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('maxKm')}" th:errors="*{maxKm}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('listPrice')}? 'has-error'">
                     <label th:for="${#ids.next('listPrice')}"><p th:text="#{car.pricem}"> price</p></label>
-                    <input type="text" th:field="*{listPrice}" />
+                    <input type="text" th:field="*{listPrice}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('listPrice')}" th:errors="*{listPrice}"></span>
                 </div>
                 <div th:class="${#fields.hasErrors('benefit')}? 'has-error'">
                     <label th:for="${#ids.next('benefit')}"> <p th:text="#{car.benefitm}">benefit</p></label>
-                    <input type="text" th:field="*{benefit}" />
+                    <input type="text" th:field="*{benefit}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('benefit')}" th:errors="*{benefit}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('amountUpgrade')}? 'has-error'">
                     <label th:for="${#ids.next('amountUpgrade')}"> <p th:text="#{car.upgrade}"> upgrade</p></label>
-                    <input type="text" th:field="*{amountUpgrade}" />
+                    <input type="text" th:field="*{amountUpgrade}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('amountUpgrade')}" th:errors="*{amountUpgrade}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('amountDowngrade')}? 'has-error'">
                     <label th:for="${#ids.next('amountDowngrade')}"> <p th:text="#{car.downgrade}"> downgrade</p></label>
-                    <input type="text" th:field="*{amountDowngrade}" />
+                    <input type="text" th:field="*{amountDowngrade}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('amountDowngrade')}" th:errors="*{amountDowngrade}"></span>
                 </div>
 
