--- a/webapp/src/main/resources/templates/employees/editpassword.html
+++ b/webapp/src/main/resources/templates/employees/editpassword.html
@@ -14,18 +14,18 @@
             <form method="POST" th:object="${editPassword}">
                 <div th:class="${#fields.hasErrors('existingPassword')}? 'has-error'">
                     <label th:for="${#ids.next('existingPassword')}"> <p th:text="#{employee.oldpassword}"> old password </p></label>
-                    <input type="password" th:field="*{existingPassword}" />
+                    <input type="password" th:field="*{existingPassword}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('existingPassword')}" th:errors="*{existingPassword}"></span>
                 </div>
 
                 <div th:class="${#fields.hasErrors('newPassword')}? 'has-error'">
                     <label th:for="${#ids.next('newPassword')}"> <p th:text="#{employee.newpassword}">new password </p></label>
-                    <input type="password" th:field="*{newPassword}" />
+                    <input type="password" th:field="*{newPassword}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"></span>
                 </div>
                 <div th:class="${#fields.hasErrors('confirmedPassword')}? 'has-error'">
                     <label th:for="${#ids.next('confirmedPassword')}"> <p th:text="#{employee.confirmpassword}"> confirm password </p></label>
-                    <input type="password" th:field="*{confirmedPassword}" />
+                    <input type="password" th:field="*{confirmedPassword}" class="form-control"/>
                     <span th:if="${#fields.hasErrors('confirmedPassword')}" th:errors="*{confirmedPassword}"></span>
                 </div>
 
