--- a/webapp/src/main/resources/templates/fleet/createcaroption.html
+++ b/webapp/src/main/resources/templates/fleet/createcaroption.html
@@ -15,13 +15,13 @@
 <form method="POST" th:object="${carOption}">
     <div th:class="${#fields.hasErrors('name')}? 'has-error'">
         <label th:for="${#ids.next('name')}"><p th:text="#{option.namem}">Name</p> </label>
-        <input type="text" th:field="*{name}" />
+        <input type="text" th:field="*{name}" class="form-control"/>
         <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
     </div>
 
     <div th:class="${#fields.hasErrors('description')}? 'has-error'">
-        <label th:for="${#ids.next('description')}"> <p th:text="#{option.description}">Descriptin</p></label>
-        <input type="text" th:field="*{description}" />
+        <label th:for="${#ids.next('description')}"> <p th:text="#{option.description}">Description</p></label>
+        <input type="text" th:field="*{description}" class="form-control"/>
         <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>
     </div>
 
