--- a/webapp/src/main/resources/templates/login.html
+++ b/webapp/src/main/resources/templates/login.html
@@ -11,7 +11,9 @@
                 <form name="loginForm" th:action="@{/login}" method="POST">
                     <fieldset>
                         <legend>Please Login</legend>
-                        <div th:if="${param.error}" class="alert alert-error">
+                        <div th:if="${param.error}" class="alert alert-danger alert-dismissible" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                                    aria-hidden="true">&times;</span></button>
                             Invalid email or password.
                         </div>
                         <label for="email">Email</label>
