--- a/webapp/src/main/resources/templates/fleet/createcaroption.html
+++ b/webapp/src/main/resources/templates/fleet/createcaroption.html
@@ -12,17 +12,17 @@
     <div class="row">
         <div class="col-lg-12">
 
-<form method="POST" th:object="${carOption}">
+<form method="POST" th:object="${carOption}" style="width: 50%;">
     <div th:class="${#fields.hasErrors('name')}? 'has-error'">
         <label th:for="${#ids.next('name')}"><p th:text="#{option.namem}">Name</p> </label>
         <input type="text" th:field="*{name}" class="form-control"/>
-        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="val-error"></span>
     </div>
 
     <div th:class="${#fields.hasErrors('description')}? 'has-error'">
         <label th:for="${#ids.next('description')}"> <p th:text="#{option.description}">Description</p></label>
         <input type="text" th:field="*{description}" class="form-control"/>
-        <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}"></span>
+        <span th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="val-error"></span>
     </div>
 
 
