fixed link to overview on order confirmation

--- a/webapp/src/main/resources/templates/employees/order-confirmed.html
+++ b/webapp/src/main/resources/templates/employees/order-confirmed.html
@@ -11,8 +11,8 @@
             <H2 th:text="#{order.confirmed}">Order Confirmed</H2>
             <p th:text="#{order.sent}">Your order has been placed and is sent to Fleet.</p>
             <p th:text="#{order.whentotreat}">Fleet will treat this as soon as possible.</p>
-            <p th:text="#{order.return}"> Return to your </p>
-            <a th:href="@{/}" th:text="#{order.personalview}">personal overview</a>
+            <p><span th:text="#{order.return}"> Return to your </span>
+            <a th:href="@{/}" th:text="#{order.personalview}">personal overview</a></p>
         </div>
     </div>
 
