changed Fill In Color to Pick A Color when ordering a car

--- a/webapp/src/main/resources/templates/employees/order-car.html
+++ b/webapp/src/main/resources/templates/employees/order-car.html
@@ -23,7 +23,7 @@
                     <input type="submit" class="btn btn-primary form-control" value="Confirm Order"/>
                 </div>
                 <div id="colorInput">
-                    <h3 th:text="#{car.fillcolor}" > Fill in color:  </h3>
+                    <h3 th:text="#{car.fillcolor}" > Pick a color:  </h3>
                     <select id="color" name="color" class="form-control">
                         <option value="Black" th:text="#{color.black}">Black</option>
                         <option value="Silver" th:text="#{color.silver}">Silver</option>
